--- a/python/session-2016-03-idf/2_modules/theorie/synope_modules_2_paquets.ipynb
+++ b/python/session-2016-03-idf/2_modules/theorie/synope_modules_2_paquets.ipynb
@@ -51,7 +51,7 @@
     "              …\n",
     "```\n",
     "\n",
-    "### Utilisation des packages : \n",
+    "## Utilisation des packages : \n",
     "\n",
     "\n",
     "Pour nommer un module **B** contenu dans un package **A**, on pourra utiliser le \"dotted module mames\" (nom de modules avec des point) : On ecrira **A.B**. Par exemple, pour appeler le module **zip** dans l'exemple précedent, on ecrira : **traitement.compression.zip**. On suit simplement le chemin vers le fichier **zip.py**.\n",
@@ -61,7 +61,7 @@
     "Un package ou un module ne peut être utilisé que s'il est importé.\n",
     "Pour importer quelque-chose, on utilise toujours le mot-clé **import**. On l'utilisera parfois associé au mot clé **from**.\n",
     "\n",
-    "#### Import avec le mot-clé **import** seul :\n",
+    "### Import avec le mot-clé **import** seul :\n",
     "\n",
     "La syntaxe est la suivante : \n",
     "\n",
@@ -91,7 +91,7 @@
     "    >>> traitement.exportation.html.write('file.html')\n",
     "```\n",
     "\n",
-    "#### Import avec les mot-clé **import** et **from** :\n",
+    "### Import avec les mot-clé **import** et **from** :\n",
     "\n",
     "* La syntaxe est la suivante : \n",
     "\n",
@@ -127,7 +127,7 @@
     "    >>> write('file.html')\n",
     "```\n",
     "\n",
-    "#### Imports relatifs\n",
+    "### Imports relatifs\n",
     "\n",
     "Au sein d'un même package, Python3 a introduit la notion d'imports relatifs.\n",
     "\n",
@@ -148,14 +148,14 @@
     "   from ..exportation import pdf # import du module pdf de notre package traitement\n",
     "```\n",
     "\n",
-    "#### Mot clé as\n",
+    "### Mot clé as\n",
     "Toutes instruction d'import peut se terminer par ```as <name>```. Par exemple :\n",
     "```python\n",
     "    >>> import traitement.exportation.html as html\n",
     "    >>> html.read(\"nom.html\") # plus court que traitement.exportation.html.read(\"nom.html\") \n",
     "```\n",
     "\n",
-    "#### Petite mise en garde\n",
+    "### Petite mise en garde\n",
     "L’instruction `from package import *` est déconseillée. Cette instruction va lancer le parcours des modules du package et faire toutes les importations. Cela peut prendre donc un certain temps et l’importation des modules peut générer des conflits dans la table de nommage. L’auteur du package peut fournir une liste explicite des modules à importer grâce à la variable `__all__` dans le fichier `__init__.py` du package.\n",
     "\n",
     "```python\n",
@@ -170,7 +170,7 @@
     "## A suivre...\n",
     "\n",
     "[Travaux pratiques](../ellipsoides/enonce/synope_modules_tp.ipynb)\n",
-    "[Distribution](synope_modules_2_distribution.ipynb)"
+    "[Distribution](synope_modules_3_distribution.ipynb)"
    ]
   },
   {
@@ -196,11 +196,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700,800,900,100italic,300italic,400italic,500italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>\n",
+       "\n",
+       "<style>\n",
+       "\n",
+       "h1, h2, h3, h4, h5 {\n",
+       "    font-family: 'Alegreya Sans', sans-serif;\n",
+       "}\n",
+       "\n",
+       "div.text_cell_render{\n",
+       "    font-family: 'Alegreya Sans',Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
+       "    line-height: 135%;\n",
+       "    font-size: 140%;\n",
+       "    width:100%;/*600px;*/\n",
+       "    /*margin-left:auto;*/\n",
+       "    /*margin-right:auto;*/\n",
+       "}\n",
+       "/*div.text_cell_render{font-family: \"Open Sans\", sans-serif;font-weight: normal; line-height:normal;}*/\n",
+       "\n",
+       "/* header colours and fonts */\n",
+       ".rendered_html h1 {\n",
+       "    color:#9A3334;\n",
+       "    /*margin-top: 0.5em;*/\n",
+       "    padding: 1em;\n",
+       "    display: block;\n",
+       "    font-size: 40px;\n",
+       "    text-align: center;\n",
+       "    border-top: 2px solid #9A3334;\n",
+       "    border-bottom: 2px solid #9A3334;\n",
+       "}\n",
+       "\n",
+       "/*.rendered_html h1 { color: #9A3334; font-family: Lora, sans-serif; font-weight: normal; text-align: center; }*/\n",
+       ".rendered_html h2 {\n",
+       "    color: #9A3334;\n",
+       "    /*font-family: Lora, sans-serif;*/\n",
+       "    font-style: italic;\n",
+       "    font-weight: normal;\n",
+       "    font-size: 30px;\n",
+       "    /*text-align: center;*/\n",
+       "    border-bottom: 1px solid #9A3334;\n",
+       "}\n",
+       ".rendered_html h3 {\n",
+       "    color: #9A3334;\n",
+       "    /*font-family: Lora, sans-serif;*/\n",
+       "    font-weight: normal;\n",
+       "    font-size: 25px;\n",
+       "    font-style: italic;\n",
+       "}\n",
+       "\n",
+       ".rendered_html h4 {\n",
+       "    border: 2px solid #9A3334;\n",
+       "    border-radius: 25px;\n",
+       "    font-style: italic;\n",
+       "    height:5%;\n",
+       "    width:20%;\n",
+       "    padding:5px;\n",
+       "    text-align: center;\n",
+       "}\n",
+       "\n",
+       "div.prompt {\n",
+       "    display: None;\n",
+       "}\n",
+       "\n",
+       "/* center the images */\n",
+       ".ui-wrapper {\n",
+       "    margin-left: auto !important;\n",
+       "    margin-right: auto !important;\n",
+       "}\n",
+       "\n",
+       "/* center the images */\n",
+       ".video {\n",
+       "    margin-left: auto !important;\n",
+       "    margin-right: auto !important;\n",
+       "}\n",
+       "\n",
+       ".rendered_html img {\n",
+       "    margin-top: 0em;\n",
+       "}\n",
+       "\n",
+       "div.input_area {\n",
+       "    border-radius: 10px;\n",
+       "}\n",
+       "\n",
+       ".reveal h1 {\n",
+       "    font-size: 70px;\n",
+       "    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);\n",
+       "}\n",
+       "\n",
+       ".reveal h2 {\n",
+       "    font-size: 50px;\n",
+       "    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);\n",
+       "}\n",
+       "\n",
+       ".reveal h3 {\n",
+       "    font-size: 50px;\n",
+       "    \n",
+       "}\n",
+       "\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# execute this part to modify the css style\n",
     "from IPython.core.display import HTML\n",
@@ -227,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
